# helix-anywhere

./: Cargo.toml  DEVELOPMENT.md  LICENSE  README.md
Formula/: helix-anywhere.rb
assets/: AppIcon.icns
scripts/: release.sh
specs/: ARCHITECTURE.md  PUBLISHING.md  modify-horkeys.md
src/: clipboard.rs  config.rs  edit_session.rs  hotkey.rs  hotkey_recorder.rs  keystroke.rs  main.rs  menu_bar.rs  terminal.rs
